samples/_failures_safe/1761721140_7a5b30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfd9af1d.c: In function ‘main’:
./samples/SAFE/__tmp_bfd9af1d.c:146:12: error: missing terminating " character
  146 |     printf("Enter %zu elements
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bfd9af1d.c:146:5: error: expected expression at end of input
  146 |     printf("Enter %zu elements
      |     ^~~~~~
./samples/SAFE/__tmp_bfd9af1d.c:146:5: error: expected declaration or statement at end of input
